Added validators for sting and integer types
Added base classes for defining validators.

--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,6 @@
         <version>${dependencies.kotlin.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>2.7.10</version>
-      </dependency>
-      <dependency>
         <groupId>org.jetbrains</groupId>
         <artifactId>annotations</artifactId>
         <version>15.0</version>
@@ -77,6 +72,12 @@
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-test-junit</artifactId>
         <version>${dependencies.kotlin.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.7.10</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
