Added Restrulz response API
Enables a typesafe way of returning a response.

--- a/.gitattributes
+++ b/.gitattributes
@@ -41,6 +41,7 @@
 *.java text
 *.kt text
 *.gradle text
+org.mockito.plugins.MockMaker text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.bat text eol=crlf
