--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
         <version>${dependencies.kotlin.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.24</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
         <version>${dependencies.spring.version}</version>
