--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   </modules>
 
   <properties>
-    <dependencies.kotlin.version>1.1.0-rc-91</dependencies.kotlin.version>
+    <dependencies.kotlin.version>1.1.0</dependencies.kotlin.version>
     <dependencies.spring-boot.version>1.5.1.RELEASE</dependencies.spring-boot.version>
     <dependencies.spring.version>4.3.6.RELEASE</dependencies.spring.version>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -525,19 +525,7 @@
     <url>http://gantsign.com</url>
   </organization>
 
-  <repositories>
-    <repository>
-      <id>kotlin</id>
-      <name>Kotlin</name>
-      <url>http://dl.bintray.com/kotlin/kotlin-eap-1.1</url>
-    </repository>
-  </repositories>
   <pluginRepositories>
-    <pluginRepository>
-      <id>kotlin</id>
-      <name>Kotlin</name>
-      <url>http://dl.bintray.com/kotlin/kotlin-eap-1.1</url>
-    </pluginRepository>
     <pluginRepository>
       <id>jcenter</id>
       <name>JCenter</name>
