--- a/com.gantsign.restrulz.spring.mvc/pom.xml
+++ b/com.gantsign.restrulz.spring.mvc/pom.xml
@@ -46,7 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib</artifactId>
+      <artifactId>kotlin-stdlib-jre8</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -152,6 +152,9 @@
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
+        <configuration>
+
+        </configuration>
         <executions>
           <execution>
             <id>compile</id>
