--- a/pom.xml
+++ b/pom.xml
@@ -521,12 +521,45 @@
     </plugins>
   </reporting>
 
+  <url>https://github.com/gantsign/restrulz-jvm</url>
+
   <inceptionYear>2017</inceptionYear>
 
   <organization>
     <name>GantSign Ltd.</name>
     <url>http://gantsign.com</url>
   </organization>
+
+  <licenses>
+    <license>
+      <name>Apache 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>John Freeman</name>
+      <organization>GantSign Ltd.</organization>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:https://github.com/gantsign/restrulz-jvm.git</connection>
+    <developerConnection>scm:git:git@github.com:gantsign/restrulz-jvm.git</developerConnection>
+    <url>https://github.com/gantsign/restrulz-jvm</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/gantsign/restrulz-jvm/issues</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>Travis CI</system>
+    <url>https://travis-ci.org/gantsign/restrulz-jvm</url>
+  </ciManagement>
 
   <pluginRepositories>
     <pluginRepository>
@@ -535,5 +568,26 @@
       <url>https://jcenter.bintray.com/</url>
     </pluginRepository>
   </pluginRepositories>
+
+  <distributionManagement>
+    <repository>
+      <id>bintray-gantsign-maven</id>
+      <name>gantsign-maven</name>
+      <url>https://dl.bintray.com/gantsign/maven</url>
+    </repository>
+  </distributionManagement>
+
+  <profiles>
+    <profile>
+      <id>publish-artifacts</id>
+      <distributionManagement>
+        <repository>
+          <id>bintray-gantsign-maven</id>
+          <name>gantsign-maven</name>
+          <url>https://api.bintray.com/maven/gantsign/maven/restrulz-jvm/;publish=1</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+  </profiles>
 
 </project>
