--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,7 @@ env:
 
 deploy:
   provider: script
-  script: >
-    ./mvnw deploy --batch-mode --show-version --settings .travis/settings.xml
-        --activate-profiles publish-artifacts
+  script: ./mvnw deploy --batch-mode --show-version --settings .travis/settings.xml --activate-profiles publish-artifacts
   on:
     tags: true
     repo: gantsign/restrulz-jvm
