Ignore IntelliJ XText plugin file
No need to version control this.

--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,8 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/windows,linux,osx,vim,emacs,visualstudiocode,intellij,eclipse,netbeans,maven,gradle,java
+
+### Project specific ###
+
+# XText plugin
+.idea/xtextAutoBuilderState.xml
