--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,11 @@
   <properties>
     <dependencies.spring-boot.version>1.5.2.RELEASE</dependencies.spring-boot.version>
     <dependencies.spring.version>4.3.7.RELEASE</dependencies.spring.version>
-    <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+    <java.version>1.8</java.version>
+    <kotlin.compiler.jvmTarget>${java.version}</kotlin.compiler.jvmTarget>
     <kotlin.version>1.1.1</kotlin.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
