--- a/com.gantsign.restrulz.spring.mvc/pom.xml
+++ b/com.gantsign.restrulz.spring.mvc/pom.xml
@@ -134,6 +134,8 @@
   </dependencies>
 
   <build>
+    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+    <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.jetbrains.dokka</groupId>
