--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.gantsign.restrulz</groupId>
-  <artifactId>restrulz-parent</artifactId>
+  <artifactId>restrulz-jvm</artifactId>
   <version>0.9.5-SNAPSHOT</version>
   <packaging>pom</packaging>
 
