--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
   </prerequisites>
 
   <modules>
+    <module>com.gantsign.restrulz.util</module>
     <module>com.gantsign.restrulz.validation</module>
     <module>com.gantsign.restrulz.json</module>
     <module>com.gantsign.restrulz.jackson</module>
