--- a/com.gantsign.restrulz.jackson/pom.xml
+++ b/com.gantsign.restrulz.jackson/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>com.gantsign.restrulz</groupId>
     <artifactId>restrulz-jvm</artifactId>
-    <version>0.9.5-SNAPSHOT</version>
+    <version>0.9.5</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
