--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>com.gantsign.restrulz</groupId>
   <artifactId>restrulz-jvm</artifactId>
-  <version>0.9.5</version>
+  <version>0.9.6-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <prerequisites>
@@ -554,7 +554,7 @@
     <connection>scm:git:https://github.com/gantsign/restrulz-jvm.git</connection>
     <developerConnection>scm:git:git@github.com:gantsign/restrulz-jvm.git</developerConnection>
     <url>https://github.com/gantsign/restrulz-jvm</url>
-    <tag>0.9.5</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
